refactored airportservice and test